[package]
name = "mini-servo"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever.workspace = true
anyhow.workspace = true
rcdom.workspace = true
blitz-dom.workspace = true
blitz-html.workspace = true

stylo.workspace = true
stylo_traits.workspace = true
stylo_config.workspace = true
stylo_dom.workspace = true

euclid.workspace = true

# script.workspace = true
# script_bindings.workspace = true
# layout.workspace = true