[package]
name = "mini-servo"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever.workspace = true
anyhow.workspace = true
atomic_refcell.workspace = true
rcdom.workspace = true
blitz-dom.workspace = true
blitz-html.workspace = true
app_units.workspace = true
webrender.workspace = true
webrender_api.workspace = true

stylo.workspace = true
stylo_traits.workspace = true
stylo_config.workspace = true
stylo_dom.workspace = true
selectors.workspace = true
range.workspace = true
servo_url.workspace = true
servo_config.workspace = true
servo_allocator.workspace = true
fonts.workspace = true
fonts_traits.workspace = true
pixels.workspace = true
net_traits.workspace = true
base.workspace = true
libservo.workspace = true
compositing.workspace = true
compositing_traits.workspace = true
constellation_traits.workspace = true
ipc-channel.workspace = true
net.workspace = true
gleam.workspace = true
surfman.workspace = true
dpi.workspace = true
winit.workspace = true
env_logger.workspace = true
profile.workspace = true

euclid.workspace = true
rayon.workspace = true
log.workspace = true
parking_lot.workspace = true
strum.workspace = true
crossbeam-channel.workspace = true

script.workspace = true
# script_bindings.workspace = true
layout.workspace = true
layout_api.workspace = true